--- a/openair/app/build.gradle
+++ b/openair/app/build.gradle
@@ -4,11 +4,11 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.myapplication"
-        minSdkVersion 15
-        targetSdkVersion 28
+        minSdkVersion 21
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        targetSdkVersion 28
     }
     buildTypes {
         release {
@@ -36,11 +36,15 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.volley:volley:1.1.0'
 
+
     // Firebase 사용 //////////////////////////////
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
     implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.squareup.okhttp3:okhttp:3.2.0'
     ///////////////////////////////////////////////
+    implementation 'org.jetbrains:annotations-java5:15.0'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.baoyz.pullrefreshlayout:library:1.2.0@aar'
 
 }
 
