--- a/openair/app/src/main/AndroidManifest.xml
+++ b/openair/app/src/main/AndroidManifest.xml
@@ -2,11 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplication">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <!-- To access location -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -16,25 +22,48 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Mypage"></activity>
+
+        <!-- 구글맵 api 등록 -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyA-a8muMW6OdmUamkfXZBm6ESuBzQUfyXk"/>
+            <!--android:value="AIzaSyDDxFtVrWydOph8Nhdhy2z01CYs_hW98jE" />-->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login" />
+            android:label="@string/title_activity_login"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".SignupActivity"
-            android:label="@string/title_activity_signup" />
-        <activity android:name=".Cash" />
-        <activity android:name=".TimeSelect" />
-        <activity android:name=".DateSelect" />
-        <activity android:name=".Reserve" />
-        <activity android:name=".ReviewActivity" />
+            android:label="@string/title_activity_signup"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Cash"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".TimeSelect"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".DateSelect"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Reserve"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ReviewActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Mypage"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".MainActivity"
-            android:configChanges="orientation|screenSize" />
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".Map"
+            android:screenOrientation="portrait"></activity>
+
         <activity
             android:name=".SplashActivity"
+            android:theme="@style/SplashTheme"
             android:label="@string/app_name"
-            android:theme="@style/SplashTheme">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -49,11 +78,14 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-        <service android:name=".MyFirebaseMessagingService">
+        <service
+            android:name=".MyFirebaseMessagingService">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
     </application>
+
+
 
 </manifest>
